--- a/style.css
+++ b/style.css
@@ -268,6 +268,34 @@ body {
             justify-content: center;
 }
 
+@keyframes fadeOut {
+            0% { opacity: 1; transform: scale(1); }
+            100% { opacity: 0; transform: scale(0.5); }
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: scale(0.5); }
+            100% { opacity: 1; transform: scale(1); }
+        }
+
+        .fade-out {
+            animation: fadeOut 0.5s forwards;
+        }
+
+        .fade-in {
+            animation: fadeIn 0.5s forwards;
+        }
+
+        /* Для мобильных устройств */
+        @media (max-width: 768px) {
+            .container-grid {
+                width: 95vw;
+                height: 95vw;
+                padding: 15px;
+                gap: 6px;
+            }
+        }
+
 
   
   .status-bar__select-traps {
